--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "dacite>=1.9.2",
-    "httpx",
-    "requests",
+    "dacite>=1.9.2"
 ]
 
 [project.scripts]
@@ -22,8 +20,10 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
-    "pytest>=8.4.1",
-    "pytest-asyncio>=1.1.0",
+    "httpx>=0.28.1",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "requests>=2.32.5",
 ]
 
 [tool.hatch.version]
